--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -12,5 +12,11 @@
         android:text="登录"
         android:textSize="24sp"
         android:textStyle="bold" />
+    <Button
+        android:id="@+id/btn_register"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="注册"/>
+    
      
 </LinearLayout>
