搜索和我的收藏功能（1）

--- a/res/layout/activity_collections.xml
+++ b/res/layout/activity_collections.xml
@@ -12,7 +12,7 @@
         android:textSize="30sp" />
 
     <ListView
-        android:id="@+id/list_search"
+        android:id="@+id/list_collections"
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
     </ListView>
