--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -1,22 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#cccccc"
     android:orientation="vertical" >
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:padding="16dp"
         android:text="登录"
-        android:textSize="24sp"
-        android:textStyle="bold" />
-    <Button
-        android:id="@+id/btn_register"
-        android:layout_width="wrap_content"
+        android:textSize="24sp" />
+
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="match_parent"
+        android:layout_height="120dp" />
+
+    <fragment
+        android:id="@+id/input_account"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="注册"/>
-    
-     
+        class="com.example.palmcampusmarket_client.fragment.inputcell.SimpleTextInputCellFragment"
+        tools:layout="@layout/fragment_inputcell_simpletext" />
+
+    <fragment
+        android:id="@+id/input_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        class="com.example.palmcampusmarket_client.fragment.inputcell.SimpleTextInputCellFragment"
+        tools:layout="@layout/fragment_inputcell_simpletext" />
+
+    <Button
+        android:id="@+id/btn_login"
+        android:layout_width="264dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="#5599ff"
+        android:text="登录"
+        android:layout_marginTop="10dp"
+        android:textColor="@android:color/white" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/btn_register"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_marginLeft="30dp"
+            android:padding="2dp"
+            android:text="用户注册" />
+
+        <TextView
+            android:id="@+id/btn_forgot_password"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="130dp"
+            android:padding="2dp"
+            android:text="忘记密码?" />
+    </LinearLayout>
+
 </LinearLayout>
