--- a/res/layout/fragment_inputcell_simpletext.xml
+++ b/res/layout/fragment_inputcell_simpletext.xml
@@ -2,22 +2,26 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
+
     android:layout_marginBottom="4dp"
     android:layout_marginTop="4dp"
     android:background="@android:color/white"
+    android:orientation="vertical"
     android:padding="8dp" >
+
     <TextView
         android:id="@+id/label"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="请输入项目"/>
+        android:background="@android:color/white"
+        android:text="请输入项目"
+        android:textColor="@android:color/black"
+        android:textSize="12sp" />
+
     <EditText
         android:id="@+id/edit"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="请输入内容"/>
-        
-    
+        android:layout_height="50dp"
+        android:hint="请输入内容" />
 
 </LinearLayout>
