--- a/res/layout/fragment_collections_item.xml
+++ b/res/layout/fragment_collections_item.xml
@@ -24,24 +24,13 @@
             android:lines="1"
             android:paddingLeft="2dp"
             android:text="商品名称商品名称商品名称商品名称商品名称商品名称商品名称"
+            android:textStyle="bold"
             android:textSize="18sp" />
-
-        <TextView
-            android:id="@+id/price_collections"
-            android:layout_width="87dp"
-            android:layout_height="53dp"
-            android:layout_alignParentRight="true"
-            android:layout_below="@+id/name_collections"
-            android:gravity="center_vertical"
-            android:paddingLeft="3dp"
-            android:paddingRight="3dp"
-            android:text="9999.99"
-            android:textSize="21sp" />
 
         <TextView
             android:id="@+id/rmb"
             android:layout_width="wrap_content"
-            android:layout_height="53dp"
+            android:layout_height="43dp"
             android:layout_alignTop="@+id/price_collections"
             android:layout_toLeftOf="@+id/price_collections"
             android:gravity="center_vertical"
@@ -60,6 +49,32 @@
             android:paddingLeft="2dp"
             android:paddingRight="2dp"
             android:text="描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述" />
+
+        <TextView
+            android:id="@+id/collected_collections"
+            android:layout_width="88dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/name_collections"
+            android:gravity="center_horizontal"
+            android:text="已有xx人收藏" 
+            android:layout_margin="2dp"
+            android:textColor="#808080"
+            />
+
+        <TextView
+            android:id="@+id/price_collections"
+            android:layout_width="87dp"
+            android:layout_height="43dp"
+            android:layout_alignLeft="@+id/collected_collections"
+            android:layout_below="@+id/collected_collections"
+            android:gravity="center_vertical"
+            android:paddingLeft="3dp"
+            android:paddingRight="3dp"
+            android:text="9999.99"
+            android:textStyle="italic"
+            android:textSize="21sp" />
+
     </RelativeLayout>
 
 </FrameLayout>
