--- a/res/layout/fragment_search_item.xml
+++ b/res/layout/fragment_search_item.xml
@@ -25,28 +25,18 @@
             android:paddingLeft="2dp"
             android:text="商品名称商品名称商品名称商品名称商品名称商品名称商品名称"
             android:textSize="18sp" />
-
+        
         <TextView
-            android:id="@+id/price_search"
-            android:layout_width="87dp"
-            android:layout_height="53dp"
+            android:id="@+id/collected_search"
+            android:layout_width="88dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_below="@+id/name_search"
-            android:gravity="center_vertical"
-            android:paddingLeft="3dp"
-            android:paddingRight="3dp"
-            android:text="9999.99"
-            android:textSize="21sp" />
-
-        <TextView
-            android:id="@+id/rmb"
-            android:layout_width="wrap_content"
-            android:layout_height="53dp"
-            android:layout_alignTop="@+id/price_search"
-            android:layout_toLeftOf="@+id/price_search"
-            android:gravity="center_vertical"
-            android:text="¥"
-            android:textSize="15sp" />
+            android:gravity="center_horizontal"
+            android:text="已有xx人收藏" 
+            android:layout_margin="2dp"
+            android:textColor="#808080"
+            />
 
         <TextView
             android:id="@+id/describe_search"
@@ -60,6 +50,30 @@
             android:paddingLeft="2dp"
             android:paddingRight="2dp"
             android:text="描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述" />
+
+        <TextView
+            android:id="@+id/price_search"
+            android:layout_width="87dp"
+            android:layout_height="43dp"
+            android:layout_alignLeft="@+id/collected_search"
+            android:layout_below="@+id/collected_search"
+            android:gravity="center_vertical"
+            android:paddingLeft="3dp"
+            android:paddingRight="3dp"
+            android:text="9999.99"
+            android:textStyle="italic"
+            android:textSize="21sp" />
+
+        <TextView
+            android:id="@+id/rmb"
+            android:layout_width="wrap_content"
+            android:layout_height="43dp"
+            android:layout_alignTop="@+id/price_search"
+            android:layout_toLeftOf="@+id/price_search"
+            android:gravity="center_vertical"
+            android:text="¥"
+            android:textSize="15sp" />
+
     </RelativeLayout>
 
 </FrameLayout>
