首页客户端和商品上架客户端

--- a/res/layout/fragment_inputcell_simpletext.xml
+++ b/res/layout/fragment_inputcell_simpletext.xml
@@ -4,23 +4,24 @@
     android:layout_height="wrap_content"
     android:layout_marginBottom="4dp"
     android:layout_marginTop="4dp"
-    android:background="@android:color/white"
-    android:orientation="vertical"
-    android:padding="8dp" >
+    android:background="@android:color/white">
+
 
     <TextView
         android:id="@+id/label"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
         android:background="@android:color/white"
         android:text="请输入项目"
         android:textColor="@android:color/black"
+        android:gravity="center"
         android:textSize="12sp" />
 
     <EditText
         android:id="@+id/edit"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
         android:hint="请输入内容" />
 
 </LinearLayout>
