--- a/res/layout/activity_palmcampus.xml
+++ b/res/layout/activity_palmcampus.xml
@@ -4,29 +4,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="请输入需要的物品" />
+    </LinearLayout>
+
     <FrameLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="60dp" >
-        
-        <LinearLayout 
-            android:layout_width="match_parent"
-            android:layout_height="50dp">
-            
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="请输入需要的物品" />
-
-        </LinearLayout>
-        
-        <ListView
-            android:id="@+id/list_commodity"
-            android:layout_width="wrap_content"
-            android:layout_height="404dp"
-            android:layout_gravity="bottom" >
-</ListView>
+        android:layout_height="400dp"
+        android:layout_marginBottom="60dp"
+        android:layout_marginTop="50dp" >
     </FrameLayout>
 
     <fragment
