--- a/res/layout/activity_recharge.xml
+++ b/res/layout/activity_recharge.xml
@@ -12,6 +12,7 @@
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_weight="5"
+            android:inputType="number"
             android:hint="输入充值金额"/>
         <Button
             android:id="@+id/recharge_button"
