--- a/res/layout/activity_register.xml
+++ b/res/layout/activity_register.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -21,20 +20,20 @@
                 android:layout_height="wrap_content"
                 class="com.example.palmcampusmarket_client.fragment.inputcell.SimpleTextInputCellFragment"
                 tools:layout="@layout/fragment_inputcell_simpletext" />
-            
+
             <fragment
                 android:id="@+id/input_telephone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 class="com.example.palmcampusmarket_client.fragment.inputcell.SimpleTextInputCellFragment"
-                tools:layout="@layout/fragment_inputcell_simpletext"/>
-            
+                tools:layout="@layout/fragment_inputcell_simpletext" />
+
             <fragment
                 android:id="@+id/input_nickname"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 class="com.example.palmcampusmarket_client.fragment.inputcell.SimpleTextInputCellFragment"
-                tools:layout="@layout/fragment_inputcell_simpletext"/>
+                tools:layout="@layout/fragment_inputcell_simpletext" />
 
             <fragment
                 android:id="@+id/input_password"
@@ -49,14 +48,20 @@
                 android:layout_height="wrap_content"
                 class="com.example.palmcampusmarket_client.fragment.inputcell.SimpleTextInputCellFragment"
                 tools:layout="@layout/fragment_inputcell_simpletext" />
-            
-          <fragment
+
+            <fragment
+                android:id="@+id/input_address"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                class="com.example.palmcampusmarket_client.fragment.inputcell.SimpleTextInputCellFragment"
+                tools:layout="@layout/fragment_inputcell_simpletext" />
+
+            <fragment
                 android:id="@+id/input_avatar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 class="com.example.palmcampusmarket_client.fragment.inputcell.PictureInputCellFragment"
                 tools:layout="@layout/fragment_inputcell_picture" />
-            
 
             <Button
                 android:id="@+id/btn_submit"
@@ -67,4 +72,3 @@
     </ScrollView>
 
 </FrameLayout>
-
