--- a/res/layout/fragment_inputcell_picture.xml
+++ b/res/layout/fragment_inputcell_picture.xml
@@ -11,14 +11,16 @@
         android:id="@+id/label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:text="选取图片"
         android:textColor="@android:color/black"
         android:textSize="12sp" />
 
     <FrameLayout
-        android:layout_width="match_parent"
+        android:layout_width="120dp"
         android:layout_height="120dp"
-        android:background="#cccccc" >
+        android:layout_gravity="center"
+        android:background="@drawable/img_bg" >
 
         <TextView
             android:id="@+id/hint"
