--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -16,21 +16,23 @@
     <ImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
-        android:layout_height="120dp" />
+        android:layout_height="120dp"
+        android:src="@drawable/abc"
+        android:background="@color/fense" />
 
     <fragment
         android:id="@+id/input_account"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        class="com.example.palmcampusmarket_client.fragment.inputcell.SimpleTextInputCellFragment"
-        tools:layout="@layout/fragment_inputcell_simpletext" />
+        class="com.example.palmcampusmarket_client.fragment.inputcell.SimpleTextInputCellFragment2"
+        tools:layout="@layout/fragment_inputcell_simpletext2" />
 
     <fragment
         android:id="@+id/input_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        class="com.example.palmcampusmarket_client.fragment.inputcell.SimpleTextInputCellFragment"
-        tools:layout="@layout/fragment_inputcell_simpletext" />
+        class="com.example.palmcampusmarket_client.fragment.inputcell.SimpleTextInputCellFragment2"
+        tools:layout="@layout/fragment_inputcell_simpletext2" />
 
     <Button
         android:id="@+id/btn_login"
