--- a/res/layout/fragment_inputcell_simpletext.xml
+++ b/res/layout/fragment_inputcell_simpletext.xml
@@ -8,18 +8,20 @@
 
     <TextView
         android:id="@+id/label"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/white"
         android:gravity="center"
         android:text="请输入项目"
         android:textColor="@android:color/black"
-        android:textSize="12sp" />
+        android:textSize="20sp"
+        android:layout_weight="3" />
 
     <EditText
         android:id="@+id/edit"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:hint="请输入内容" />
+        android:hint="请输入内容" 
+        android:layout_weight="1"/>
 
 </LinearLayout>
