--- a/res/layout/fragment_page_me.xml
+++ b/res/layout/fragment_page_me.xml
@@ -4,5 +4,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
     
+    <TextView 
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="me"
+        android:textSize="30sp"
+        />
+    
 
 </LinearLayout>
