--- a/res/layout/fragment_page_addcommodity.xml
+++ b/res/layout/fragment_page_addcommodity.xml
@@ -20,6 +20,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="50dp"
         android:background="@android:color/white"
         android:orientation="vertical" >
 
@@ -27,46 +28,51 @@
             android:id="@+id/comm_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             class="com.example.palmcampusmarket_client.fragment.inputcell.CommoditySimpleTextInputCellFragment"
-            tools:layout="@layout/fragment_inputcell_simpletext"
-            tools:lyout="@layout/fragment_inputcell_simpletext" />
+            tools:layout="@layout/fragment_inputcell_simpletext" />
 
         <fragment
             android:id="@+id/comm_price"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             class="com.example.palmcampusmarket_client.fragment.inputcell.CommoditySimpleTextInputCellFragment"
-            tools:layout="@layout/fragment_inputcell_simpletext"
-            tools:lyout="@layout/fragment_inputcell_simpletext" />
+            tools:layout="@layout/fragment_inputcell_simpletext" />
 
         <fragment
             android:id="@+id/comm_number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             class="com.example.palmcampusmarket_client.fragment.inputcell.CommoditySimpleTextInputCellFragment"
             tools:layout="@layout/fragment_inputcell_simpletext"
-            tools:lyout="@layout/fragment_inputcell_simpletext" />
+            />
 
         <fragment
             android:id="@+id/comm_describle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             class="com.example.palmcampusmarket_client.fragment.inputcell.CommoditySimpleTextInputCellFragment"
             tools:layout="@layout/fragment_inputcell_simpletext"
-            tools:lyout="@layout/fragment_inputcell_simpletext" />
+            />
 
         <fragment
             android:id="@+id/comm_image"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             class="com.example.palmcampusmarket_client.fragment.inputcell.CommodityPictureInputCellFragment"
             tools:layout="@layout/fragment_inputcell_picture" />
 
         <Button
             android:id="@+id/btn_add"
-            android:layout_width="238dp"
+            android:layout_width="90dp"
             android:layout_height="50dp"
+            android:background="@drawable/shape"
             android:layout_gravity="center"
+            
             android:text="上架"
             android:textColor="@android:color/black" />
     </LinearLayout>
