--- a/res/layout/fragment_inputcell_picture.xml
+++ b/res/layout/fragment_inputcell_picture.xml
@@ -28,12 +28,12 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="请选择图片"
-            android:textColor="@android:color/white" />
+            android:textColor="@android:color/black" />
 
         <ImageView
             android:id="@+id/image"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </FrameLayout>
 
 </LinearLayout>
