--- a/res/layout/fragment_inputcell_simpletext3.xml
+++ b/res/layout/fragment_inputcell_simpletext3.xml
@@ -5,18 +5,21 @@
     android:layout_marginBottom="4dp"
     android:layout_marginTop="4dp"
     android:orientation="horizontal"
-    android:background="@android:color/white" >   
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:background="@drawable/edit_bg" >   
   
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="4"/>
     <EditText
         android:id="@+id/edit"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:hint="请输入内容" 
-        android:background="@null"
-        android:drawableBottom="@drawable/line"/>
-    <CheckBox
-        android:id="@+id/checkbox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:hint="请输入内容"
+        android:layout_weight="1"
+        android:background="@null" />
+
 
 </LinearLayout>
