--- a/res/layout/fragment_inputcell_simpletext.xml
+++ b/res/layout/fragment_inputcell_simpletext.xml
@@ -9,20 +9,19 @@
 
     <TextView
         android:id="@+id/label"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:background="@android:color/white"
         android:gravity="center"
         android:text="请输入项目"
-        android:textColor="@android:color/black"
-        android:textSize="20sp" />
+        android:textColor="@android:color/black" />
 
     <EditText
         android:id="@+id/edit"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_weight="4"
+        android:layout_weight="3"
         android:hint="请输入内容" />
 
 </LinearLayout>
