--- a/res/layout/fragment_page_addcommodity.xml
+++ b/res/layout/fragment_page_addcommodity.xml
@@ -46,8 +46,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             class="com.example.palmcampusmarket_client.fragment.inputcell.CommoditySimpleTextInputCellFragment"
-            tools:layout="@layout/fragment_inputcell_simpletext"
-            />
+            tools:layout="@layout/fragment_inputcell_simpletext" />
 
         <fragment
             android:id="@+id/comm_describle"
@@ -55,8 +54,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             class="com.example.palmcampusmarket_client.fragment.inputcell.CommoditySimpleTextInputCellFragment"
-            tools:layout="@layout/fragment_inputcell_simpletext"
-            />
+            tools:layout="@layout/fragment_inputcell_simpletext" />
 
         <fragment
             android:id="@+id/comm_image"
@@ -70,9 +68,8 @@
             android:id="@+id/btn_add"
             android:layout_width="90dp"
             android:layout_height="50dp"
-            android:background="@drawable/shape"
             android:layout_gravity="center"
-            
+            android:background="@drawable/shape"
             android:text="上架"
             android:textColor="@android:color/black" />
     </LinearLayout>
