--- a/res/layout/activity_palmcampus.xml
+++ b/res/layout/activity_palmcampus.xml
@@ -4,24 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="请输入需要的物品" />
-    </LinearLayout>
-
-    <FrameLayout
-        android:id="@+id/content"
-        android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:layout_marginBottom="60dp"
-        android:layout_marginTop="50dp" >
-    </FrameLayout>
-
     <fragment
         android:id="@+id/frag_tabbar"
         android:layout_width="match_parent"
@@ -29,5 +11,12 @@
         android:layout_gravity="bottom"
         class="com.example.palmcampusmarket_client.fragment.MainTabbarFragment"
         tools:layout="@layout/fragment_page_home" />
+
+    <FrameLayout
+        android:id="@+id/content"
+        android:layout_width="match_parent"
+        android:layout_height="448dp"
+        android:layout_marginBottom="0dp" >
+    </FrameLayout>
 
 </FrameLayout>
