--- a/res/layout/fragment_page_home_list.xml
+++ b/res/layout/fragment_page_home_list.xml
@@ -4,11 +4,17 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
- 
+    <Button
+       android:id="@+id/searchButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#EDEDED"
+        android:hint="请输入需要的物品" />
+
     <ListView
         android:id="@+id/homelist"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="458dp"
         android:layout_marginTop="61dp" >
     </ListView>
 
