--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -20,7 +20,7 @@
         android:gravity="center">
         
         <ImageView
-            android:id="@+id/image"
+            android:id="@+id/long_image"
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:layout_gravity="center"
