--- a/res/layout/fragment_page_home.xml
+++ b/res/layout/fragment_page_home.xml
@@ -11,13 +11,14 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:gravity="center"
+        
         android:orientation="vertical" >
 
         <ImageView
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:scaleType="fitCenter"
-            android:src="@drawable/ic_launcher" />
+            android:src="@drawable/home" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -35,10 +36,10 @@
         android:orientation="vertical" >
 
         <ImageView
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:scaleType="fitCenter"
-            android:src="@drawable/ic_launcher" />
+            android:src="@drawable/collection" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -63,10 +64,10 @@
         android:orientation="vertical" >
 
         <ImageView
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:scaleType="fitCenter"
-            android:src="@drawable/ic_launcher" />
+            android:src="@drawable/shoppingcart" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -84,10 +85,10 @@
         android:orientation="vertical" >
 
         <ImageView
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:scaleType="fitCenter"
-            android:src="@drawable/ic_launcher" />
+            android:src="@drawable/me" />
 
         <TextView
             android:layout_width="wrap_content"
