完成页面之间的跳转

--- a/res/layout/activity_commodity_content.xml
+++ b/res/layout/activity_commodity_content.xml
@@ -19,7 +19,7 @@
             android:text="＜"
             android:textSize="30sp" />
 
-        <ImageView
+        <com.example.palmcampusmarket_client.fragment.AvatarView
             android:id="@+id/image_commodity_content"
             android:layout_width="240dp"
             android:layout_height="160dp"
