--- a/res/layout/fragment_search_item.xml
+++ b/res/layout/fragment_search_item.xml
@@ -8,7 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" >
 
-        <ImageView
+        <com.example.palmcampusmarket_client.fragment.AvatarView
             android:id="@+id/image_search"
             android:layout_width="77dp"
             android:layout_height="77dp"
