--- a/res/layout/activity_purchase.xml
+++ b/res/layout/activity_purchase.xml
@@ -5,7 +5,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -22,14 +21,13 @@
                 android:layout_height="match_parent"
                 android:weightSum="10" >
 
-                <ImageView
+                <com.example.palmcampusmarket_client.fragment.AvatarView
                     android:id="@+id/commodity_picture"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="7"
                     android:padding="5dp"
-                    android:src="@drawable/text_picture2" >
-                </ImageView>
+                    android:src="@drawable/text_picture2" />
 
                 <TextView
                     android:id="@+id/commodity_describe"
@@ -72,9 +70,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="6"
-                    android:inputType="number" 
-                    android:text="1"
-                    android:gravity="center"/>
+                    android:gravity="center"
+                    android:inputType="number"
+                    android:text="1" />
 
                 <Button
                     android:id="@+id/buy_add"
@@ -133,10 +131,6 @@
             </LinearLayout>
         </FrameLayout>
 
-       
-   
-        
-        
         <!-- 价格 -->
 
         <TextView
@@ -148,8 +142,6 @@
             android:paddingRight="25dp"
             android:text="价格"
             android:textSize="18dp" />
-       
-        
     </FrameLayout>
 
     <fragment
