--- a/res/layout/wight_feed_item.xml
+++ b/res/layout/wight_feed_item.xml
@@ -44,7 +44,7 @@
             android:layout_height="wrap_content"
             android:paddingTop="40dp"
             android:text="price"
-            android:textColor="@android:color/black" />
+            android:textColor="@android:color/holo_red_light" />
 
         <TextView
             android:id="@+id/seller"
