--- a/res/layout/fragment_password_recover_step1.xml
+++ b/res/layout/fragment_password_recover_step1.xml
@@ -8,21 +8,49 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="120dp"
         android:orientation="vertical" >
+        <RelativeLayout
+                    
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:background="@color/login_background"
+                    android:orientation="horizontal">
 
+                    <ImageButton
+                        
+                        android:id="@+id/wallet_back"
+                        android:layout_width="wrap_content"
+                        android:layout_height="50dp"
+                        android:background="@color/orange"
+                        android:src="@drawable/fanhui_02" />
+
+                    <TextView
+                        android:id="@+id/title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:layout_centerVertical="true"
+                        android:text="修改密码"
+                        android:textColor="@color/white"
+                        android:textSize="20sp" />
+                </RelativeLayout>
         <fragment
             android:id="@+id/input_telephone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            class="com.example.palmcampusmarket_client.fragment.inputcell.SimpleTextInputCellFragment"
-            tools:layout="@layout/fragment_inputcell_simpletext" />
+            class="com.example.palmcampusmarket_client.fragment.inputcell.SimpleTextInputCellFragment3"
+            tools:layout="@layout/fragment_inputcell_simpletext3" />
         
         <Button
-            android:id="@+id/btn_next"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:text="下一步" />
+                android:id="@+id/btn_next"
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:text="下一步"
+                android:layout_marginTop="30dp"
+                android:background="@drawable/edit_bg"
+                android:textColor="#663333" />
+     
     </LinearLayout>
 
 </FrameLayout>
