--- a/res/layout/fragment_page_me.xml
+++ b/res/layout/fragment_page_me.xml
@@ -10,21 +10,21 @@
         android:background="@drawable/textview_select"
         android:clickable="true">
         
-        <!--<com.example.palmcampusmarket_client.fragment.AvatarView
-            android:id="@+id/my_page_avatar"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />-->
-        <ImageView
+       <com.example.palmcampusmarket_client.fragment.AvatarView
+           android:id="@+id/my_page_image"
+           android:layout_width="100dp"
+           android:layout_height="100dp"
+           android:layout_centerVertical="true"
+           android:layout_alignParentLeft="true"
+           android:layout_alignParentStart="true" />
+       <!-- <ImageView
             android:id="@+id/my_page_avatar"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:src="@drawable/xiaohei"/>
+            android:src="@drawable/xiaohei"/>-->
         <TextView
             android:id="@+id/my_page_ninckname"
             android:layout_width="wrap_content"
@@ -32,8 +32,8 @@
             android:text="风度翩翩"
             android:layout_marginLeft="10dp"
             android:layout_above="@+id/my_page_imageView"
-            android:layout_toRightOf="@+id/my_page_avatar"
-            android:layout_toEndOf="@+id/my_page_avatar" />
+            android:layout_toRightOf="@+id/my_page_image"
+            android:layout_toEndOf="@+id/my_page_image" />
         <ImageView
             android:layout_width="40dp"
             android:layout_height="40dp"
