--- a/res/layout/activity_evaluation.xml
+++ b/res/layout/activity_evaluation.xml
@@ -14,7 +14,7 @@
             android:weightSum="10" >
 
             
-            <com.example.palmcampusmarket_client.fragment.AvatarView
+            <com.example.palmcampusmarket_client.fragment.ImageDown
                     android:id="@+id/commodity_picture"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
