--- a/res/layout/activity_palmcampus.xml
+++ b/res/layout/activity_palmcampus.xml
@@ -7,7 +7,7 @@
     <fragment
         android:id="@+id/frag_tabbar"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         class="com.example.palmcampusmarket_client.fragment.MainTabbarFragment"
         tools:layout="@layout/fragment_page_home" />
@@ -15,7 +15,7 @@
     <FrameLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
-        android:layout_height="448dp"
+        android:layout_height="475dp"
         android:layout_marginBottom="0dp" >
     </FrameLayout>
 
