--- a/res/layout/fragment_page_home_list.xml
+++ b/res/layout/fragment_page_home_list.xml
@@ -2,41 +2,42 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:background="#F2F2F2" >
 
-          <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:gravity="right"
-            android:orientation="horizontal"
-            android:background="@android:color/white" >
+    <!--
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@android:color/white"
+        android:orientation="vertical" >
 
-            <TextView
-                android:id="@+id/title_home"
-                android:layout_width="match_parent"
-                android:layout_height="44dp"
-                android:layout_margin="3dp"
-                android:layout_toLeftOf="@+id/btn_search_home"
-                android:text="掌上校园"
-                android:textColor="@android:color/holo_blue_light"
-                android:gravity="center_vertical"
-                android:textStyle="italic"
-                android:textSize="33sp" />
+        <Button
+            android:id="@+id/btn_search_home"
+            android:layout_width="208dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:background="#F2F2F2"
+            android:drawableBottom="@drawable/line2"
+            android:hint="输入需要的物品" />
+    </FrameLayout>
+    -->
+    <!-- 重新设计首页顶部搜索框 -->
 
-            <Button
-                android:id="@+id/btn_search_home"
-                android:layout_width="33dp"
-                android:layout_height="33dp"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/image_search" />
-        </RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="45dp" 
+        android:orientation="vertical"
+        android:background="@null">
+        
+        
+        
+        
+    </LinearLayout>
 
     <ListView
         android:id="@+id/homelist"
         android:layout_width="match_parent"
-        android:layout_height="458dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="61dp" >
     </ListView>
 
