--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="orange">#F05829</color>
     <color name="login_button_background">#71c297</color>
       <color name="content_color">#666666</color>
+      <color name="color_white">#ffffff</color>
 </resources>
