--- a/res/layout/activity_table.xml
+++ b/res/layout/activity_table.xml
@@ -3,19 +3,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="5dp" >
+    android:orientation="vertical" >
 
     <fragment
         android:id="@+id/frag_lunbo"
         android:layout_width="match_parent"
-        android:layout_height="160dp"
+        android:layout_height="120dp"
         class="com.example.palmcampusmarket_client.fragment.LunboFragment"
         tools:layout="@layout/lunbo" />
+
     <TableLayout
         android:id="@+id/table"
         android:layout_width="match_parent"
-        android:layout_height="90dp" >
+        android:layout_height="80dp"
+        android:layout_margin="5dp" >
 
         <!-- 第1行 -->
 
