--- a/res/layout/activity_collections.xml
+++ b/res/layout/activity_collections.xml
@@ -2,10 +2,13 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/white" >
+    android:background="@color/white"
+    android:orientation="vertical" >
 
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical" >
 
         <TextView
             android:layout_width="match_parent"
@@ -17,16 +20,14 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_gravity="bottom"
             android:background="@android:color/darker_gray" />
 
         <ListView
             android:id="@+id/list_collections"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:layout_marginTop="47dp" >
+            android:background="@color/white" >
         </ListView>
-
+    </LinearLayout>
 
 </FrameLayout>
