--- a/res/layout/activity_palmcampus.xml
+++ b/res/layout/activity_palmcampus.xml
@@ -15,12 +15,11 @@
     <FrameLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
-        android:layout_height="471dp"
-         >
+        android:layout_height="471dp" >
     </FrameLayout>
 
     <FrameLayout
-        android:id="@+id/frame_new_outside" 
+        android:id="@+id/frame_new_outside"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#55ffffff" >
