--- a/res/layout/fragment_password_recover_step2.xml
+++ b/res/layout/fragment_password_recover_step2.xml
@@ -18,7 +18,7 @@
 
                     <ImageButton
                         
-                        android:id="@+id/wallet_back"
+                        android:id="@+id/password_recover_setp2_back"
                         android:layout_width="wrap_content"
                         android:layout_height="50dp"
                         android:background="#ff0099cc"
