--- a/res/layout/activity_register.xml
+++ b/res/layout/activity_register.xml
@@ -22,7 +22,7 @@
 
                     <ImageButton
                         
-                        android:id="@+id/wallet_back"
+                        android:id="@+id/register_back"
                         android:layout_width="wrap_content"
                         android:layout_height="50dp"
                         android:background="#ff0099cc"
@@ -95,9 +95,10 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="提交"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="1dp"
                 android:layout_marginLeft="50dp"
                 android:layout_marginRight="50dp"
+                android:layout_marginBottom="10dp"
                 android:background="@drawable/edit_bg"
                 android:textColor="#663333" />
         </LinearLayout>
